adaptive for main block

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
           </div>
         </div>
       </div>
+      <div class="Yellow_block__adaptive">
+        <div class="Yellow_block__text">Доступ на всех платформах</div>
+          <button class="Yellow_block__button">Узнать больше</button>
+      </div>
       <div class="Yellow_block">
         <div class="Yellow_block__contain">
           <div class="Yellow_block__text">Доступ на всех платформах</div>
