--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <div class="signUp__block">
           <div class="signUp__block__column">
-            <div class="singUp__block__line">Как тебя зовут?</div>
-            <div class="singUp__block__line">Твой е-mail</div>
+            <input placeholder="Как тебя зовут?" class="singUp__block__line">
+            <input placeholder="Твой е-mail" class="singUp__block__line">
             <div class="signUp__block__add_screen">Прикрепить скриншот</div>
             <button class="signUp__button">Отправить</button>
             <div class="singUp__agree">
